crates/forward-compatible-enum/tests/ui/not_an_enum.rs
use forward_compatible_enum::ForwardCompatibleEnum;

#[derive(ForwardCompatibleEnum)]  // Should fail - not an enum!
pub struct NotAnEnum {
    field: u32,
}